[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2", "chialisp_builder==0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsms"
description = "Hardware security module simulator for chia bls12_381 signatures"
authors = [{ name = "Richard Kiss", email = "him@richardkiss.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
  "segno==1.4.1",
  "chia_base @ git+https://github.com/richardkiss/chia_base@91d9dba09e316714cf4bc86505587437fe442e48#egg=chia_base",
  "chialisp_puzzles @ git+https://github.com/richardkiss/chialisp_puzzles@eb97cd844b094e6dcd595b5bd6522d3a78eb692c#egg=chialisp_puzzles",
]
# version is defined with `setuptools_scm`
dynamic = ["version"]

[project.optional-dependencies]
dev = ["flake8>=4.0.1", "black>=22.6", "pytest"]

[project.scripts]
hsms = "hsms.cmds.hsms:main"
hsmpk = "hsms.cmds.hsmpk:main"
hsmgen = "hsms.cmds.hsmgen:main"
hsmmerge = "hsms.cmds.hsmmerge:main"
hsm_test_spend = "hsms.cmds.hsm_test_spend:main"
hsm_dump_sb = "hsms.cmds.hsm_dump_sb:main"
hsm_dump_us = "hsms.cmds.hsm_dump_us:main"
qrint = "hsms.cmds.qrint:main"
hsmwizard = "hsms.cmds.hsmwizard:main"

# version is defined with `setuptools_scm`
[tool.setuptools_scm]
local_scheme = "no-local-version"
